Fixed layout bug

--- a/css/styles.css
+++ b/css/styles.css
@@ -383,8 +383,8 @@ horarios{
     }
 
     .modal-content {
-      width: 220px;
-      height: 300px;
+      width: 230px;
+      height: 350px;
       background-color: #082349 !important;
       margin: 0 auto;
   }
